[package]
name = "lang"
version = "0.1.0"
authors = ["Adrien Heisch <adrienheisch@orange.fr>"]
edition = "2018"

[lib]
name = "lang"
path = "src/lib.rs"

[[bin]]
name = "lang"
path = "src/bin.rs"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true

[dependencies]
typed-arena = "2.0.1"

[dev-dependencies]
criterion = "0.3.1"